syntax = "proto3";

package post;

service PostsService {
  rpc FindOne (PostById) returns (Post);
}

message PostById {
  string id = 1;
}

message Post {
  string post_id = 1;
  string post_url = 2;
  string post_title = 3;
}